# python-freeswitch-esl

./: README.md  pyproject.toml
src/python_freeswitch_esl/: __init__.py  connection.py  events.py
tests/: test_connection.py
