[project]
name = "python-freeswitch-esl"
version = "0.1.0"
description = "Native python freeswitch ESL client"
readme = "README.md"
authors = [
    { name = "Jørn Lomax", email = "northlomax@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
